--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ html{
     color: white;
     text-decoration: none;
 }
+h2 .you::before{
+    content: '\f16';
+    font-family: 'Font Awesome 6 Free';
+}
 .universal{
     font-size: 50px;
     padding-left: 50px;
@@ -96,6 +100,11 @@ body{
 }
 .end{
     border: 0;
+}
+.yt::before{
+    content: '\f167';
+    font-family: 'Font Awesome 6 Free';
+    color: white;
 }
 footer{
     background-color: rgba(26, 26, 30, 1);
